crates/test-files/fixtures/compile_errors/circular_dependency_create2.fe
contract Foo {
    pub fn bar(ctx: Context) -> address {
        let foo: Foo = Foo.create2(ctx, 2, 0)
        return address(foo)
    }
}
